--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,11 +16,10 @@
     </style>
 
     <style name="Theme.App" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimaryDark">?attr/colorPrimary</item>
+        <!--        <item name="colorPrimaryDark">?attr/colorPrimary</item>-->
         <!-- Transparent system bars for edge-to-edge. -->
         <item name="android:navigationBarColor">@android:color/transparent</item>
-        <item name="android:statusBarColor">?attr/colorPrimaryDark</item>
-        <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
         <!--这个还没有搞懂？-->
         <!-- <item name="colorPrimarySurface">@color/black</item>
          <item name="colorOnPrimarySurface">@color/black</item>
